add link to other tools, css tweaks, remove fonts

--- a/RuneLevel/styles/main.css
+++ b/RuneLevel/styles/main.css
@@ -23,21 +23,10 @@ html, body {
     text-shadow: 0.15rem 0.15rem 0.0rem rgba(0, 0, 0, 0.50);
 }
 
-@font-face {
-	font-family: Garamond;
-	src: url('../fonts/gara.ttf');
-}
-
-@font-face {
-	font-family: GaramondBold;
-	src: url('../fonts/garabd.ttf');
-}
-
 body {
-	margin: 4rem 0rem 0rem 0rem;
 	font-size: 1.8rem;
     line-height: 1.9rem;
-	font-family: Garamond, Helvetica, Arial, sans-serif;
+	font-family: Calibri, Adobe Gothic Standard B, Helvetica, Arial, sans-serif;
 }
 
 #contentBody {
@@ -57,21 +46,17 @@ body {
 h1 {
     font-size: 4rem;
     line-height: 5.2rem;
-    font-weight: normal;
-    font-family: GaramondBold;
     padding: 0.25rem 0rem 0.25rem 0rem;
     text-align: center;
     background-color: #34362a66;
     border-top: 0.3rem solid #4c4940;
     border-bottom: 0.3rem solid #4c4940;
-    margin: 1rem 0rem;
+    margin: 2rem 0rem 1rem 0rem;
 }
 
 h2 {
     font-size: 2.5rem;
     line-height: 2.6rem;
-    font-weight: normal;
-    font-family: GaramondBold;
     padding: 0.25rem 0rem 0.25rem 0rem;
     text-align: center;
     background-color: #34362a66;
@@ -160,7 +145,7 @@ a {
 
 a:link, a:active {
     color: var(--colorAccentDark);
-    font-family: GaramondBold;
+    font-weight: bold;
 }
 
 a:visited {
